# gann

./: LICENSE  README.md  meson.build
lib/: activation-layer.c  activation.h  convolution-layer.c  fully-layer.c  gann-activation.c  gann-activation.h  gann-barrier-private.h  gann-barrier.c  gann-barrier.h  gann-buffer-private.h  gann-buffer.c  gann-buffer.h  gann-cl-barrier.c  gann-cl-barrier.h  gann-context-private.h  gann-context.c  gann-context.h  gann-conv-filter.c  gann-conv-filter.h  gann-conv-layer.c  gann-conv-layer.h  gann-dense-layer.c  gann-dense-layer.h  gann-fully-layer.c  gann-fully-layer.h  gann-input-layer.c  gann-input-layer.h  gann-layer-private.h  gann-layer.c  gann-layer.h  gann-network-private.h  gann-network.c  gann-network.h  gann-opencl.h  gann-output-layer.c  gann-output-layer.h  gann-program-builder.c  gann-program-builder.h  gann.h  input-layer.c  (+5 more)
lib/core/: activation.h  buffer.c  buffer.h  cl-code-gresource.xml  cl-gresource.xml  clear-buffer.cl  context.c  context.h  conv-layer.c  conv-layer.cl  core.h  dense-layer.c  dense-layer.cl  fill-pattern.cl  fully-layer.c  fully-layer.cl  input-layer.c  layer.c  layer.h  leaky.cl  meson.build  network.c  network.h  output-layer.c  output-layer.cl  relu.cl  sigmoid.cl  softplus.cl  util.c  util.h
test/: application.c  application.h  dense-test.c  main.c  meson.build
